SF Primes/src/objects/Laser_Artwork_Order__c.object
<CustomObject>
    <fields>
        <fullName>SOX_Dealer_Name_in_e_mail__c</fullName>
        <label>(SOX) Dealer Name in e-mail</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOX_Image_In_Quote__c</fullName>
        <label>(SOX) Image In Quote</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOX_Q_S_Match_Oracle__c</fullName>
        <label>(SOX) Q/S $ Match Oracle</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOX_Q_S_Rcvd_in_KL__c</fullName>
        <label>(SOX) Q/S Rcvd in KL</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSTT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SSTT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment_Name__c</fullName>
        <formula>Ship_CMF_Info__r.Segment_Name__c</formula>
        <label>Segment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_To_Data_Mapping_Other__c</fullName>
        <label>Sent To DASH</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Edge_Client__c</fullName>
        <label>Service Edge Client</label>
        <summarizedField>Laser_Ordered_Forms__c.Service_Edge_Client__c</summarizedField>
        <summaryForeignKey>Laser_Ordered_Forms__c.Laser_Artwork_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Business_Unit_Code__c</fullName>
        <description>Ship CMF - Business Unit Code</description>
        <formula>Ship_CMF_Info__r.Ship_CMF_Business_Unit_Code__c</formula>
        <label>Ship CMF - Business Unit Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Business_Unit__c</fullName>
        <description>Ship CMF Business Unit</description>
        <formula>Ship_CMF_Info__r.Ship_CMF_Business_Unit__c</formula>
        <label>Ship CMF - Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship CMF Info</label>
        <referenceTo>CMF_Info__c</referenceTo>
        <relationshipName>R00N40000001m7zMEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Region_Code_Name__c</fullName>
        <description>Ship CMF - Region Code Name</description>
        <formula>Ship_CMF_Info__r.Ship_CMF_Region_Code_Name__c</formula>
        <label>Ship CMF - Region Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Region_Code__c</fullName>
        <description>Ship CMF Region Code</description>
        <formula>Ship_CMF_Info__r.Ship_CMF_Region_Code__c</formula>
        <label>Ship CMF - Region Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_CMF__c</fullName>
        <formula>Ship_CMF_Info__r.Ship_CMF__c</formula>
        <label>Ship-To CMF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_Install_Date__c</fullName>
        <label>Specific Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Hidden__c</fullName>
        <formula>Ship_CMF_Info__r.Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State_Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Forms Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Additional Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to FB and/or Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold-CDK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms Collected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stock_Order_Total__c</fullName>
        <label>Stock Order-Total $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stock_Order__c</fullName>
        <label>Stock Order #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Hidden__c</fullName>
        <formula>Ship_CMF_Info__r.Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street-Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SubProject_Status__c</fullName>
        <label>SubProject Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject__c</fullName>
        <label>SubProject</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Deals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Deals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toner_Order_Actual_End_Date__c</fullName>
        <inlineHelpText>Date Premium Paper Order Confirmation # is entered or Premium Paper Order is declined.</inlineHelpText>
        <label>Toner Order Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Toner_Order_Actual_Start_Date__c</fullName>
        <formula>IF(Toner_Order_Declined__c = True,  Toner_Order_Actual_End_Date__c,  Toner_Order_Placed__c )</formula>
        <label>Toner Order Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Toner_Order_Confirmation__c</fullName>
        <label>Toner Order Confirmation #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toner_Order_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Toner Order Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toner_Order_Placed__c</fullName>
        <label>Toner Order Placed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Forms__c</fullName>
        <description>Total Number of Forms</description>
        <label>Total Number of Forms</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>IF(( Stock_Order_Total__c  &lt;=  LAO_Value__c ), Stock_Order_Total__c, LAO_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <summarizedField>Laser_Ordered_Forms__c.Unit_Price_Override__c</summarizedField>
        <summaryForeignKey>Laser_Ordered_Forms__c.Laser_Artwork_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tracking_Link_inbound__c</fullName>
        <formula>IF (NOT ( ISBLANK( Tracking_Number_inbound__c )), 
HYPERLINK(&quot;http://wwwapps.ups.com/etracking/tracking.cgi?tracknums_displayed=1&amp;TypeOfInquiryNumber=T&amp;HTMLVersion=4.0&amp;InquiryNumber1=&quot;&amp; Tracking_Number_inbound__c ,&quot;Track Inbound Package&quot; ), &quot; &quot;)</formula>
        <label>Tracking Link (inbound)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Link_outbound__c</fullName>
        <formula>IF (NOT ( ISBLANK( Tracking_Number_outbound__c )), 
HYPERLINK(&quot;http://wwwapps.ups.com/etracking/tracking.cgi?tracknums_displayed=1&amp;TypeOfInquiryNumber=T&amp;HTMLVersion=4.0&amp;InquiryNumber1=&quot;&amp; Tracking_Number_outbound__c ,&quot;Track Outbound Package&quot; ), &quot; &quot;)</formula>
        <label>Tracking Link (outbound)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number_inbound__c</fullName>
        <label>Tracking Number (inbound)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number_outbound__c</fullName>
        <label>Tracking Number (outbound)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transition_Date__c</fullName>
        <label>Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unmapped_Completed__c</fullName>
        <label>Unmapped - Completed</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unmapped_Needed__c</fullName>
        <label>Unmapped - Needed</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Changed_Status__c</fullName>
        <description>Used for Approval Process Reporting. Hidden from Users</description>
        <label>User Changed Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VIC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms_Order3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Doc_Received__c</fullName>
        <label>Vision Doc Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Void_Date__c</fullName>
        <label>Void Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Void_Notes__c</fullName>
        <label>Void Notes</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Void_Stock_Order__c</fullName>
        <label>Void Stock Order #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Kit_Sent__c</fullName>
        <label>Welcome Kit Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Welcome_Kit_Type__c</fullName>
        <label>Welcome Kit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add-On FI/DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concurrent FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OneEighty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P/S/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X30_Day_notification_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>30 Day notification complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X60_Day_notification_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>60 Day notification complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X90_Day_notification_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>90 Day notification complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZIP_Hidden__c</fullName>
        <formula>Ship_CMF_Info__r.Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZIP-Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ePayments_Client__c</fullName>
        <label>ePayments Client</label>
        <summarizedField>Laser_Ordered_Forms__c.Laser_Ordered_Forms__c</summarizedField>
        <summaryForeignKey>Laser_Ordered_Forms__c.Laser_Artwork_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>eSignature_Client__c</fullName>
        <label>eSignature Client</label>
        <summarizedField>Laser_Ordered_Forms__c.eSignature__c</summarizedField>
        <summaryForeignKey>Laser_Ordered_Forms__c.Laser_Artwork_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_F_I_forms_collected__c</fullName>
        <label># of F&amp;I forms collected</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_PSA_forms_collected__c</fullName>
        <label># of PSA forms collected</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Forms Order</label>
    <listViews>
        <fullName>All_Forms_Orders</fullName>
        <columns>NAME</columns>
        <columns>Ship_CMF_Info__c</columns>
        <columns>Contract_PO__c</columns>
        <columns>Prev_SO__c</columns>
        <columns>Stock_Order__c</columns>
        <columns>Contact__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Forms Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DS_FFC_Add_Change_LIS_Laser_Artwork_Order</fullName>
        <columns>NAME</columns>
        <columns>Ship_CMF_Info__c</columns>
        <columns>Order_Priority__c</columns>
        <columns>Order_Type__c</columns>
        <columns>Forms_to_LIS_Team__c</columns>
        <columns>Specific_Install_Date__c</columns>
        <columns>Artwork_Vision_Case__c</columns>
        <columns>Project__c</columns>
        <columns>Order_Status__c</columns>
        <filterScope>Queue</filterScope>
        <label>Add/Change LIS</label>
        <language>en_US</language>
        <queue>DS_FFC_Add_Change_LIS</queue>
    </listViews>
    <listViews>
        <fullName>My_Open_Orders</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4) OR (5 AND 6 AND 7 AND 8)</booleanFilter>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Order_Type__c</columns>
        <columns>Order_Status__c</columns>
        <columns>Stock_Order__c</columns>
        <columns>Contract_PO__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>KnowledgeLake_Link__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Order_Type__c</field>
            <operation>equals</operation>
            <value>Add/Change - ELF,Add/Change - Elite,Add/Change – Other,Buy/Sell - ELF</value>
        </filters>
        <filters>
            <field>Order_Type__c</field>
            <operation>equals</operation>
            <value>Buy/Sell - Elite,Buy/Sell – Other,New Install - ELF,New Install - Elite</value>
        </filters>
        <filters>
            <field>Order_Type__c</field>
            <operation>equals</operation>
            <value>New Install – Other</value>
        </filters>
        <filters>
            <field>Order_Status__c</field>
            <operation>notEqual</operation>
            <value>Installed</value>
        </filters>
        <filters>
            <field>Order_Type__c</field>
            <operation>equals</operation>
            <value>Add/Change - Alliance,Add/Change - eShowroom/Showroom,Add/Change - FI/DC</value>
        </filters>
        <filters>
            <field>Order_Type__c</field>
            <operation>equals</operation>
            <value>Add/Change - WDS,Buy/Sell - Alliance,Buy/Sell - FI/DC,New Install - Alliance</value>
        </filters>
        <filters>
            <field>Order_Type__c</field>
            <operation>equals</operation>
            <value>New Install - eShowroom/Showroom,New Install - FI/DC,New Install - WDS</value>
        </filters>
        <filters>
            <field>Order_Status__c</field>
            <operation>notEqual</operation>
            <value>Sent to Data Mapping/Other</value>
        </filters>
        <label>My Open Orders</label>
    </listViews>
    <nameField>
        <displayFormat>FO - {0000000}</displayFormat>
        <label>Forms Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forms Order</pluralLabel>
    <recordTypes>
        <fullName>F_I</fullName>
        <active>true</active>
        <label>F&amp;I</label>
    </recordTypes>
    <recordTypes>
        <fullName>Laser_Imaging</fullName>
        <active>true</active>
        <label>Laser Imaging</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DS_FO_AssignedFormsBuilder</fullName>
        <active>true</active>
        <description>Assigned Form Builder needed for status &apos;Data Mapping&apos; and &apos;Sold&apos;</description>
        <errorConditionFormula>If(ISCHANGED( By_Pass_Forms_Validation_Rules__c ), FALSE,OR( 
AND (RecordType.Name=&quot;F&amp;I&quot;, NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c)), ISNEW(), ISBLANK( Assigned_Forms_Builder__c ),OR((ISPICKVAL(Order_Type__c, &quot;New Install - Impact&quot;) || ISPICKVAL(Order_Type__c, &quot;PFW/CRM/Custom Pencil&quot;) || ISPICKVAL(Order_Type__c, &quot;One-Eighty&quot;)) &amp;&amp; (ISPICKVAL(Order_Status__c, &quot;Data Mapping&quot;) || ISPICKVAL(Order_Status__c, &quot;Sold&quot;))),(ISPICKVAL(Order_Type__c, &quot;New Install Concurrent&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - CTW&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - CTW&quot;)) &amp;&amp; ISPICKVAL(Order_Status__c, &quot;Data Mapping&quot;)), 
RecordType.Name=&quot;F&amp;I&quot; &amp;&amp; NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; OR((ISPICKVAL(Order_Type__c, &quot;New Install - Impact&quot;) || ISPICKVAL(Order_Type__c, &quot;PFW/CRM/Custom Pencil&quot;) || ISPICKVAL(Order_Type__c, &quot;One-Eighty&quot;)) &amp;&amp; 
(ISPICKVAL(Order_Status__c, &quot;Data Mapping&quot;) || ISPICKVAL(Order_Status__c, &quot;Sold&quot;)),(ISPICKVAL(Order_Type__c, &quot;New Install Concurrent&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - CTW&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - CTW&quot;)) &amp;&amp; ISPICKVAL(Order_Status__c, &quot;Data Mapping&quot;)) &amp;&amp; (ISBLANK( Assigned_Forms_Builder__c ))))</errorConditionFormula>
        <errorDisplayField>Assigned_Forms_Builder__c</errorDisplayField>
        <errorMessage>Assigned Form Builder needed for status &apos;Data Mapping&apos; and &apos;Sold&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_FO_Contact</fullName>
        <active>true</active>
        <description>Contact Required except for Order Status Sold</description>
        <errorConditionFormula>If(ISCHANGED(By_Pass_Forms_Validation_Rules__c), FALSE, OR(AND(NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c)),ISNEW(),NOT(ISPICKVAL(Order_Status__c, &quot;Sold&quot;)),ISBLANK(Contact__c)), 
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; NOT(ISPICKVAL(Order_Status__c, &quot;Sold&quot;))&amp;&amp; ISBLANK(Contact__c)))</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>Please select Contact Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_FO_ContractPO_Required</fullName>
        <active>true</active>
        <description>Contract/PO# Required for Laser Imaging for Buy/Sell and New Install Order Types</description>
        <errorConditionFormula>If(ISCHANGED(By_Pass_Forms_Validation_Rules__c), FALSE, OR(AND(RecordType.Name=&quot;Laser Imaging&quot;, NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c)),ISNEW(),OR(CONTAINS(TEXT(Order_Type__c), &apos;Buy/Sell&apos;),CONTAINS(TEXT(Order_Type__c), &apos;New Install&apos;)),ISBLANK(Contract_PO__c)), RecordType.Name=&quot;Laser Imaging&quot; &amp;&amp;
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; (CONTAINS(TEXT(Order_Type__c), &apos;Buy/Sell&apos;) || CONTAINS(TEXT(Order_Type__c), &apos;New Install&apos;))  &amp;&amp; ISBLANK(Contract_PO__c)))</errorConditionFormula>
        <errorDisplayField>Contract_PO__c</errorDisplayField>
        <errorMessage>Please enter Contract/PO#</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_FO_DataMapping</fullName>
        <active>true</active>
        <description>If Order Staus = &apos;Data Mapping&apos; Then Data Mapping &gt;= Form Posted</description>
        <errorConditionFormula>If(OR(ISCHANGED(By_Pass_Forms_Validation_Rules__c),ISPICKVAL(New_Artwork_Needed__c, &quot;No&quot;) &amp;&amp; (ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install Concurrent&quot;) || 
ISPICKVAL(Order_Type__c, &quot;Upgrade to DC - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - FI/DC&quot;)) &amp;&amp; 
RecordType.Name=&quot;F&amp;I&quot;), FALSE, OR( 
AND (RecordType.Name=&quot;F&amp;I&quot;, NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c)), ISNEW(), Data_Mapping__c &lt; Forms_Posted__c, (ISPICKVAL(Order_Type__c, &quot;Add/Change - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Upgrade to DC - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - FI/DC&quot;))), 
RecordType.Name=&quot;F&amp;I&quot; &amp;&amp; NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c))&amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; (ISPICKVAL(Order_Type__c, &quot;Add/Change - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Upgrade to DC - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - FI/DC&quot;)) &amp;&amp; 
(ISPICKVAL(Order_Status__c, &quot;Data Mapping&quot;)) &amp;&amp; 
((Data_Mapping__c &lt; Forms_Posted__c || ISBLANK(Data_Mapping__c) || ISBLANK(Forms_Posted__c)))))</errorConditionFormula>
        <errorDisplayField>Data_Mapping__c</errorDisplayField>
        <errorMessage>Incorrect Date or Form Posted is null ===&gt; If Order Staus = &apos;Data Mapping&apos; Then Data Mapping &gt;= Form Posted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_FO_FCCName</fullName>
        <active>true</active>
        <description>FCC Name Required on Status Sent to FB and/or Complete</description>
        <errorConditionFormula>If(ISCHANGED(By_Pass_Forms_Validation_Rules__c), FALSE, OR(AND(NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c)),ISNEW(),ISPICKVAL(Status__c,&quot;Sent to FB and/or Complete&quot;),ISBLANK(FCC_Name__c)), 
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; ISPICKVAL(Status__c,&quot;Sent to FB and/or Complete&quot;) &amp;&amp; ISBLANK(FCC_Name__c)))</errorConditionFormula>
        <errorDisplayField>FCC_Name__c</errorDisplayField>
        <errorMessage>Please enter FCC Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_FO_FormstoLISTeam</fullName>
        <active>true</active>
        <description>Forms To LIS Team Order Status is invalid for Buy/Sell and New Install Order Types</description>
        <errorConditionFormula>If(ISCHANGED(By_Pass_Forms_Validation_Rules__c), FALSE,OR(
AND(RecordType.Name=&quot;Laser Imaging&quot;, NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c)), ISNEW(), ISPICKVAL(Order_Status__c, &quot;Forms to LIS Team&quot;),ISPICKVAL(Order_Type__c, &quot;New Install - DASH&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Other&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - DASH&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - ELF&quot;)|| ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Other&quot;)), RecordType.Name=&quot;Laser Imaging&quot; &amp;&amp;
NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; (ISPICKVAL(Order_Type__c, &quot;New Install - DASH&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Other&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - DASH&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - ELF&quot;)|| ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Other&quot;)) &amp;&amp; 
(ISPICKVAL(Order_Status__c, &quot;Forms to LIS Team&quot;))))</errorConditionFormula>
        <errorDisplayField>Order_Status__c</errorDisplayField>
        <errorMessage>Forms To LIS Team Order Status is invalid for Buy/Sell and New Install Order Types</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_FO_FormstoLISTeamDate</fullName>
        <active>true</active>
        <errorConditionFormula>If(ISCHANGED(By_Pass_Forms_Validation_Rules__c), FALSE, OR( 
AND (RecordType.Name=&quot;Laser Imaging&quot;, NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c)), ISNEW(), Forms_to_LIS_Team__c &lt; Burn_Completed__c, ISPICKVAL(Order_Status__c, &quot;At LI Team&quot;)), 
RecordType.Name=&quot;Laser Imaging&quot; &amp;&amp; NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c))&amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; ISPICKVAL(Order_Status__c, &quot;At LI Team&quot;) &amp;&amp; 
((Forms_to_LIS_Team__c &lt; Burn_Completed__c || ISBLANK(Forms_to_LIS_Team__c) || ISBLANK(Burn_Completed__c)))))</errorConditionFormula>
        <errorDisplayField>Forms_to_LIS_Team__c</errorDisplayField>
        <errorMessage>Incorrect Date or Form to LIS Team is null ===&gt; If Order Staus = &apos;At LI Team&apos; Forms to LIS  Team&gt;= Burn Completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_FO_OrderStatus_Required</fullName>
        <active>true</active>
        <description>Order Status Required for Laser Imaging and Not on New Record</description>
        <errorConditionFormula>If(ISCHANGED(By_Pass_Forms_Validation_Rules__c), FALSE,AND(RecordType.Name=&quot;Laser Imaging&quot;, NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c)),ISCHANGED(Order_Status__c),ISBLANK(TEXT(Order_Status__c))))</errorConditionFormula>
        <errorDisplayField>Order_Status__c</errorDisplayField>
        <errorMessage>Please enter Order Status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_FO_QuoteType_Required</fullName>
        <active>true</active>
        <description>Quote Type Required for Laser Imaging for Add/Change Order Types</description>
        <errorConditionFormula>If(ISCHANGED(By_Pass_Forms_Validation_Rules__c), FALSE, OR(AND(RecordType.Name=&quot;Laser Imaging&quot;, NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c)),ISNEW(),CONTAINS(TEXT(Order_Type__c), &apos;Add/Change&apos;),ISBLANK(TEXT(Quote_Type__c))), RecordType.Name=&quot;Laser Imaging&quot; &amp;&amp;
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; CONTAINS(TEXT(Order_Type__c), &apos;Add/Change&apos;)&amp;&amp; ISBLANK(TEXT(Quote_Type__c))))</errorConditionFormula>
        <errorDisplayField>Quote_Type__c</errorDisplayField>
        <errorMessage>Please enter Quote Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_FO_WelcomeKitType</fullName>
        <active>true</active>
        <description>Welcome Kit Type Required on Status Sent to FB and/or Complete</description>
        <errorConditionFormula>If(ISCHANGED(By_Pass_Forms_Validation_Rules__c), FALSE,OR(AND(NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c)),ISNEW(),ISPICKVAL(Status__c,&quot;Sent to FB and/or Complete&quot;),ISBLANK(TEXT(Welcome_Kit_Type__c))),
NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; ISPICKVAL(Status__c,&quot;Sent to FB and/or Complete&quot;) &amp;&amp; ISBLANK(TEXT(Welcome_Kit_Type__c))))</errorConditionFormula>
        <errorDisplayField>Welcome_Kit_Type__c</errorDisplayField>
        <errorMessage>Please enter Welcome Kit Type</errorMessage>
    </validationRules>
</CustomObject>